--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
   <header>Header</header>
-  <main>Main</main>
+  <main>
+    <h1>GIT Webinar</h1>
+    Main content
+  </main>
   <footer>Footer</footer>
 </body>
 </html>
