--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>GIT Webinar</title>
 </head>
 <body>
-  <header>Header</header>
+  <header>Header 2</header>
   <main>
     <h1>GIT Webinar</h1>
     Main content
