--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 <body>
   <header>Header 123</header>
   <main>
-    <h1>GIT Webinar MASTER</h1>
-    
+
+    <h1>GIT Webinar GH PAGES</h1>
+
     <section>Main content</section>
 
   </main>
