--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header>Header 123</header>
   <main>
-    <h1>GIT Webinar</h1>
+    <h1>GIT Webinar MASTER</h1>
     
     <section>Main content</section>
 
